--- a/weekdays/package.json
+++ b/weekdays/package.json
@@ -6,6 +6,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
+    "moment": "^2.18.1",
+    "ramda": "^0.23.0",
     "react": "^0.14.9",
     "react-native": "0.24.0"
   }
