--- a/weather/package.json
+++ b/weather/package.json
@@ -7,8 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.0"
+		"react": "15.4.0",
+    "react-native": "0.40"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
